# shino

./: .djlintrc  .gitmodules  CNAME  Cargo.toml  Dockerfile  README.md  astro.config.mjs  biome.json  flake.nix  package-lock.json  package.json  shell.nix  tailwind.config.js  tailwind.config.mjs  wrangler.toml
.github/workflows/: astro.yml  docker-image.yml
resources/static/: output.css
src/: main.rs  pi.md
src/components/: Background.astro  Counter.jsx  ToggleTheme.jsx
src/layouts/: Layout.astro
src/pages/: index.astro
src/scripts/: background.ts
static/: output.css  style.css
templates/: base.html  blog.html  hello.html  home.html
