[package]
name = "ortin"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = "0.7.4"
markdown = "1.0.0-alpha.18"
shuttle-axum = "0.45.0"
shuttle-runtime = "0.45.0"
tokio = "1.28.2"
tower-http = {version = "0.5.2", features = ["fs", "trace"]}
tower-livereload = "0.9.2"
