[package]
name = "shino"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = "0.7.4"
markdown = "1.0.0-alpha.18"
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
tower-http = {version = "0.5.2", features = ["fs", "trace"]}
tower-livereload = "0.9.2"

